parser/language_parser.go
// Code generated from Language.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // Language

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type LanguageParser struct {
	*antlr.BaseParser
}

var languageParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func languageParserInit() {
	staticData := &languageParserStaticData
	staticData.literalNames = []string{
		"", "'*'", "'/'", "'+'", "'-'", "'='", "'<'", "'>'", "'<='", "'>='",
		"'=='", "'/='", "'&&'", "'||'", "'('", "')'", "'{'", "'}'", "','", "';'",
		"'|'", "'::'", "'data'", "'case'", "'of'", "'->'",
	}
	staticData.symbolicNames = []string{
		"", "MUL", "DIV", "ADD", "SUB", "ASSIGN", "LT", "GT", "LTE", "GTE",
		"EQ", "NEQ", "AND", "OR", "PAREN_LEFT", "PAREN_RIGHT", "BRACE_LEFT",
		"BRACE_RIGHT", "COMMA", "SEMICOLON", "VERTICAL_BAR", "DOUBLE_COLON",
		"DATA", "CASE", "OF", "ARROW", "INT", "CHAR", "STRING", "VARID", "CONID",
		"WHITESPACE", "COMMENT", "LINE_COMMENT",
	}
	staticData.ruleNames = []string{
		"start", "topdecls", "topdecl", "simpletype", "constrs", "constrdef",
		"decl", "gendecl", "vars", "type", "btype", "atype", "funlhs", "rhs",
		"exp", "fexp", "aexp", "alts", "alt", "pat", "apat", "literal",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// LanguageParserInit initializes any static state used to implement LanguageParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLanguageParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LanguageParserInit() {
	staticData := &languageParserStaticData
	staticData.once.Do(languageParserInit)
}

// NewLanguageParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLanguageParser(input antlr.TokenStream) *LanguageParser {
	LanguageParserInit()
	this := new(LanguageParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &languageParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Language.g4"

	return this
}

// LanguageParser tokens.
const (
	LanguageParserEOF          = antlr.TokenEOF
	LanguageParserMUL          = 1
	LanguageParserDIV          = 2
	LanguageParserADD          = 3
	LanguageParserSUB          = 4
	LanguageParserASSIGN       = 5
	LanguageParserLT           = 6
	LanguageParserGT           = 7
	LanguageParserLTE          = 8
	LanguageParserGTE          = 9
	LanguageParserEQ           = 10
	LanguageParserNEQ          = 11
	LanguageParserAND          = 12
	LanguageParserOR           = 13
	LanguageParserPAREN_LEFT   = 14
	LanguageParserPAREN_RIGHT  = 15
	LanguageParserBRACE_LEFT   = 16
	LanguageParserBRACE_RIGHT  = 17
	LanguageParserCOMMA        = 18
	LanguageParserSEMICOLON    = 19
	LanguageParserVERTICAL_BAR = 20
	LanguageParserDOUBLE_COLON = 21
	LanguageParserDATA         = 22
	LanguageParserCASE         = 23
	LanguageParserOF           = 24
	LanguageParserARROW        = 25
	LanguageParserINT          = 26
	LanguageParserCHAR         = 27
	LanguageParserSTRING       = 28
	LanguageParserVARID        = 29
	LanguageParserCONID        = 30
	LanguageParserWHITESPACE   = 31
	LanguageParserCOMMENT      = 32
	LanguageParserLINE_COMMENT = 33
)

// LanguageParser rules.
const (
	LanguageParserRULE_start      = 0
	LanguageParserRULE_topdecls   = 1
	LanguageParserRULE_topdecl    = 2
	LanguageParserRULE_simpletype = 3
	LanguageParserRULE_constrs    = 4
	LanguageParserRULE_constrdef  = 5
	LanguageParserRULE_decl       = 6
	LanguageParserRULE_gendecl    = 7
	LanguageParserRULE_vars       = 8
	LanguageParserRULE_type       = 9
	LanguageParserRULE_btype      = 10
	LanguageParserRULE_atype      = 11
	LanguageParserRULE_funlhs     = 12
	LanguageParserRULE_rhs        = 13
	LanguageParserRULE_exp        = 14
	LanguageParserRULE_fexp       = 15
	LanguageParserRULE_aexp       = 16
	LanguageParserRULE_alts       = 17
	LanguageParserRULE_alt        = 18
	LanguageParserRULE_pat        = 19
	LanguageParserRULE_apat       = 20
	LanguageParserRULE_literal    = 21
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LanguageParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LanguageParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Topdecls() ITopdeclsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopdeclsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopdeclsContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(LanguageParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LanguageParser) Start() (localctx IStartContext) {
	this := p
	_ = this

	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LanguageParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Topdecls()
	}
	{
		p.SetState(45)
		p.Match(LanguageParserEOF)
	}

	return localctx
}

// ITopdeclsContext is an interface to support dynamic dispatch.
type ITopdeclsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTopdeclsContext differentiates from other interfaces.
	IsTopdeclsContext()
}

type TopdeclsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopdeclsContext() *TopdeclsContext {
	var p = new(TopdeclsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LanguageParserRULE_topdecls
	return p
}

func (*TopdeclsContext) IsTopdeclsContext() {}

func NewTopdeclsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopdeclsContext {
	var p = new(TopdeclsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LanguageParserRULE_topdecls

	return p
}

func (s *TopdeclsContext) GetParser() antlr.Parser { return s.parser }

func (s *TopdeclsContext) CopyFrom(ctx *TopdeclsContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *TopdeclsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopdeclsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type TopDeclsListContext struct {
	*TopdeclsContext
}

func NewTopDeclsListContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TopDeclsListContext {
	var p = new(TopDeclsListContext)

	p.TopdeclsContext = NewEmptyTopdeclsContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TopdeclsContext))

	return p
}

func (s *TopDeclsListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopDeclsListContext) AllTopdecl() []ITopdeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopdeclContext); ok {
			len++
		}
	}

	tst := make([]ITopdeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopdeclContext); ok {
			tst[i] = t.(ITopdeclContext)
			i++
		}
	}

	return tst
}

func (s *TopDeclsListContext) Topdecl(i int) ITopdeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopdeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopdeclContext)
}

func (s *TopDeclsListContext) AllSEMICOLON() []antlr.TerminalNode {
	return s.GetTokens(LanguageParserSEMICOLON)
}

func (s *TopDeclsListContext) SEMICOLON(i int) antlr.TerminalNode {
	return s.GetToken(LanguageParserSEMICOLON, i)
}

func (s *TopDeclsListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterTopDeclsList(s)
	}
}

func (s *TopDeclsListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitTopDeclsList(s)
	}
}

func (s *TopDeclsListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitTopDeclsList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LanguageParser) Topdecls() (localctx ITopdeclsContext) {
	this := p
	_ = this

	localctx = NewTopdeclsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LanguageParserRULE_topdecls)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	localctx = NewTopDeclsListContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<LanguageParserDATA)|(1<<LanguageParserINT)|(1<<LanguageParserCHAR)|(1<<LanguageParserSTRING)|(1<<LanguageParserVARID)|(1<<LanguageParserCONID))) != 0 {
		{
			p.SetState(47)
			p.Topdecl()
		}

	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(50)
				p.Match(LanguageParserSEMICOLON)
			}
			{
				p.SetState(51)
				p.Topdecl()
			}

		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == LanguageParserSEMICOLON {
		{
			p.SetState(57)
			p.Match(LanguageParserSEMICOLON)
		}

	}

	return localctx
}

// ITopdeclContext is an interface to support dynamic dispatch.
type ITopdeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTopdeclContext differentiates from other interfaces.
	IsTopdeclContext()
}

type TopdeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopdeclContext() *TopdeclContext {
	var p = new(TopdeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LanguageParserRULE_topdecl
	return p
}

func (*TopdeclContext) IsTopdeclContext() {}

func NewTopdeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopdeclContext {
	var p = new(TopdeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LanguageParserRULE_topdecl

	return p
}

func (s *TopdeclContext) GetParser() antlr.Parser { return s.parser }

func (s *TopdeclContext) CopyFrom(ctx *TopdeclContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *TopdeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopdeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DataTopDeclContext struct {
	*TopdeclContext
}

func NewDataTopDeclContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DataTopDeclContext {
	var p = new(DataTopDeclContext)

	p.TopdeclContext = NewEmptyTopdeclContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TopdeclContext))

	return p
}

func (s *DataTopDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DataTopDeclContext) DATA() antlr.TerminalNode {
	return s.GetToken(LanguageParserDATA, 0)
}

func (s *DataTopDeclContext) Simpletype() ISimpletypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimpletypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimpletypeContext)
}

func (s *DataTopDeclContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(LanguageParserASSIGN, 0)
}

func (s *DataTopDeclContext) Constrs() IConstrsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstrsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstrsContext)
}

func (s *DataTopDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterDataTopDecl(s)
	}
}

func (s *DataTopDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitDataTopDecl(s)
	}
}

func (s *DataTopDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitDataTopDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

type FunTopDeclContext struct {
	*TopdeclContext
}

func NewFunTopDeclContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FunTopDeclContext {
	var p = new(FunTopDeclContext)

	p.TopdeclContext = NewEmptyTopdeclContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TopdeclContext))

	return p
}

func (s *FunTopDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunTopDeclContext) Decl() IDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *FunTopDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterFunTopDecl(s)
	}
}

func (s *FunTopDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitFunTopDecl(s)
	}
}

func (s *FunTopDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitFunTopDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LanguageParser) Topdecl() (localctx ITopdeclContext) {
	this := p
	_ = this

	localctx = NewTopdeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LanguageParserRULE_topdecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(66)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LanguageParserDATA:
		localctx = NewDataTopDeclContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.Match(LanguageParserDATA)
		}
		{
			p.SetState(61)
			p.Simpletype()
		}
		{
			p.SetState(62)
			p.Match(LanguageParserASSIGN)
		}
		{
			p.SetState(63)
			p.Constrs()
		}

	case LanguageParserINT, LanguageParserCHAR, LanguageParserSTRING, LanguageParserVARID, LanguageParserCONID:
		localctx = NewFunTopDeclContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(65)
			p.Decl()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ISimpletypeContext is an interface to support dynamic dispatch.
type ISimpletypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimpletypeContext differentiates from other interfaces.
	IsSimpletypeContext()
}

type SimpletypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimpletypeContext() *SimpletypeContext {
	var p = new(SimpletypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LanguageParserRULE_simpletype
	return p
}

func (*SimpletypeContext) IsSimpletypeContext() {}

func NewSimpletypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SimpletypeContext {
	var p = new(SimpletypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LanguageParserRULE_simpletype

	return p
}

func (s *SimpletypeContext) GetParser() antlr.Parser { return s.parser }

func (s *SimpletypeContext) CopyFrom(ctx *SimpletypeContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *SimpletypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpletypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DataTypeContext struct {
	*SimpletypeContext
}

func NewDataTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DataTypeContext {
	var p = new(DataTypeContext)

	p.SimpletypeContext = NewEmptySimpletypeContext()
	p.parser = parser
	p.CopyFrom(ctx.(*SimpletypeContext))

	return p
}

func (s *DataTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DataTypeContext) CONID() antlr.TerminalNode {
	return s.GetToken(LanguageParserCONID, 0)
}

func (s *DataTypeContext) AllVARID() []antlr.TerminalNode {
	return s.GetTokens(LanguageParserVARID)
}

func (s *DataTypeContext) VARID(i int) antlr.TerminalNode {
	return s.GetToken(LanguageParserVARID, i)
}

func (s *DataTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterDataType(s)
	}
}

func (s *DataTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitDataType(s)
	}
}

func (s *DataTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitDataType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LanguageParser) Simpletype() (localctx ISimpletypeContext) {
	this := p
	_ = this

	localctx = NewSimpletypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LanguageParserRULE_simpletype)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewDataTypeContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(LanguageParserCONID)
	}
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == LanguageParserVARID {
		{
			p.SetState(69)
			p.Match(LanguageParserVARID)
		}

		p.SetState(74)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IConstrsContext is an interface to support dynamic dispatch.
type IConstrsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConstrsContext differentiates from other interfaces.
	IsConstrsContext()
}

type ConstrsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstrsContext() *ConstrsContext {
	var p = new(ConstrsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LanguageParserRULE_constrs
	return p
}

func (*ConstrsContext) IsConstrsContext() {}

func NewConstrsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstrsContext {
	var p = new(ConstrsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LanguageParserRULE_constrs

	return p
}

func (s *ConstrsContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstrsContext) CopyFrom(ctx *ConstrsContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ConstrsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstrsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ConstrListContext struct {
	*ConstrsContext
}

func NewConstrListContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ConstrListContext {
	var p = new(ConstrListContext)

	p.ConstrsContext = NewEmptyConstrsContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ConstrsContext))

	return p
}

func (s *ConstrListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstrListContext) AllConstrdef() []IConstrdefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstrdefContext); ok {
			len++
		}
	}

	tst := make([]IConstrdefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstrdefContext); ok {
			tst[i] = t.(IConstrdefContext)
			i++
		}
	}

	return tst
}

func (s *ConstrListContext) Constrdef(i int) IConstrdefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstrdefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstrdefContext)
}

func (s *ConstrListContext) AllVERTICAL_BAR() []antlr.TerminalNode {
	return s.GetTokens(LanguageParserVERTICAL_BAR)
}

func (s *ConstrListContext) VERTICAL_BAR(i int) antlr.TerminalNode {
	return s.GetToken(LanguageParserVERTICAL_BAR, i)
}

func (s *ConstrListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.EnterConstrList(s)
	}
}

func (s *ConstrListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LanguageListener); ok {
		listenerT.ExitConstrList(s)
	}
}

func (s *ConstrListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LanguageVisitor:
		return t.VisitConstrList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LanguageParser) Constrs() (localctx IConstrsContext) {
	this := p
	_ = this

	localctx = NewConstrsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, LanguageParserRULE_constrs)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewConstrListContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Constrdef()
	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == LanguageParserVERTICAL_BAR {
		{
			p.SetState(76)
			p.Match(LanguageParserVERTICAL_BAR)
		}
		{
			p.SetState(77)
			p.Constrdef()
		}
